Cards section adedd

--- a/index.html
+++ b/index.html
@@ -44,9 +44,39 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
      </header>
      <!-- cards section -->
       <section class="cards-section">
-        <div>
+        <div class="note">
             <h2>
 Notes don't fail, Structure does.</h2>
+<p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <div class="image-div">
+                    <img src="image/Vector.png" alt="vactor image">
+                </div>
+                <h2>Scattered notes</h2>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="card">
+                <div class="image-div"><img src="image/Bookmarks.png" alt="vactor image"></div>
+                <h2>Bookmark overload</h2>
+                <p>Hundreds of saved links you'll never revisit or remember.</p>
+            </div>
+            <div class="card">
+                <div class="image-div">
+                    <img src="image/Brain.png" alt="vactor image">
+                </div>
+                <h2>No idea connections</h2>
+                <p>Insights stay isolated, never building into bigger understanding.</p>
+            </div>
+            <div class="card">
+                <div class="image-div">
+                    <img src="image/Info.png" alt="vactor image">
+                </div>
+                <h2>Forgetting what
+you learned</h2>
+                <p>Knowledge fades because there's no system to retain it.</p>
+            </div>
         </div>
       </section>
 </body>
