brain section added

--- a/index.html
+++ b/index.html
@@ -79,5 +79,37 @@ you learned</h2>
             </div>
         </div>
       </section>
+      <!-- brain section  -->
+       <section class="brain">
+        
+        <div>
+            <img class="brain-image" src="image/knowledge.png" alt="Brain image">
+
+        </div>
+        <div class="knowledge-text">
+            <h4>The Solution</h4>
+            <h2>Your second brain,
+structured by design.</h2>
+<p class="text-p">Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+    <div class="contents">
+        <div class="brain-containt">
+            <img src="image/CheckCircle.png" alt="" class="content-image">
+            <p class="content-text">Capture ideas with structure built-in from day one</p>
+        </div>
+        <div class="brain-containt">
+            <img src="image/CheckCircle.png" alt="" class="content-image">
+            <p class="content-text">Connect related concepts automatically as you write</p>
+        </div>
+        <div class="brain-containt">
+            <img src="image/CheckCircle.png" alt="" class="content-image">
+            <p class="content-text">Build lasting knowledge through reflection prompts</p>
+        </div>
+        <div class="brain-containt">
+            <img src="image/CheckCircle.png" alt="" class="content-image">
+            <p class="content-text">Find anything instantly with semantic search</p>
+        </div>
+    </div>
+        </div>
+       </section>
 </body>
 </html>
