early access section added

--- a/index.html
+++ b/index.html
@@ -111,5 +111,18 @@ structured by design.</h2>
     </div>
         </div>
        </section>
+       <!-- Get Early Access sectoion -->
+        <section class="early-access">
+            <div>
+                <h2>Ready to think more clearly?</h2>
+                <p>Join thousands of learners who are building their personal knowledge vaults. Start free, no credit card required.</p>
+                    <button class="btn">Get Early Access</button>
+                    <div class="early-link">
+                        <a href="#">Free during early access </a>
+                        <span>.</span>
+                        <a href="">No credit card needed</a>
+                    </div>
+            </div>
+        </section>
 </body>
 </html>
