footer section added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <body class="inter-font">
     <!-- header section -->
      <header>
@@ -90,7 +91,7 @@ you learned</h2>
             <h4>The Solution</h4>
             <h2>Your second brain,
 structured by design.</h2>
-<p class="text-p">Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+<p class="text-p">Personal Knowledge Vault isn't another note-taking app. zIt's a thinking environment where every note, link, and summarybecomes part of an interconnected web of understanding.</p>
     <div class="contents">
         <div class="brain-containt">
             <img src="image/CheckCircle.png" alt="" class="content-image">
@@ -115,7 +116,7 @@ structured by design.</h2>
         <section class="early-access">
             <div>
                 <h2>Ready to think more clearly?</h2>
-                <p>Join thousands of learners who are building their personal knowledge vaults. Start free, no credit card required.</p>
+                <p>Join thousands of learners who are building their personal knowledge vaults.Start free, no credit card required.</p>
                     <button class="btn">Get Early Access</button>
                     <div class="early-link">
                         <a href="#">Free during early access </a>
@@ -124,5 +125,23 @@ structured by design.</h2>
                     </div>
             </div>
         </section>
+        <!-- footer section -->
+         <footer>
+            <div class="footer-main">
+                <div>
+                    <img src="image/logo-footer.png" alt="footer logo" class="footer-image">
+
+                </div>
+                <div class="footer-link">
+                    <h2>Social Links</h2>
+                    <div class="social-icon-div">
+                        <i class="fa-brands fa-x-twitter"></i>
+                       <i class="fa-brands fa-instagram"></i> 
+                        <i class="fa-brands fa-facebook"></i>
+                    </div>
+                </div>
+            </div>
+            <p class="footer-copywrite">© 2026 Personal Knowledge Vault. All rights reserved.</p>
+         </footer>
 </body>
 </html>
