--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <p>A private space to store notes, links, and learning summaries — designed to <br>
 help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
 <div class="hero-buttons">
-    <button class="btn">Start Building Your Vault</button>
-    <button class="btn hero-btn2">See How It Works</button>
+    <button class="btn">Start Building Your Vault <i class="fa-solid fa-arrow-right"></i></button>
+    <button class="btn hero-btn2"><i class="fa-solid fa-play"></i> See How It Works</button>
 </div>
             </div>
         </div>
@@ -117,7 +117,7 @@ structured by design.</h2>
             <div>
                 <h2>Ready to think more clearly?</h2>
                 <p>Join thousands of learners who are building their personal knowledge vaults.Start free, no credit card required.</p>
-                    <button class="btn">Get Early Access</button>
+                    <button class="btn">Get Early Access <i class="fa-solid fa-arrow-right"></i></button>
                     <div class="early-link">
                         <a href="#">Free during early access </a>
                         <span>.</span>
